--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-community/async-storage": "github:react-native-community/react-native-async-storage",
     "async-storage": "^0.1.0",
     "axios": "^0.19.0",
     "react": "16.8.3",
